ingress/ingress-storybook-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storybook-qa-svc
            port:
              name: storybookqa
