ingress/ingress-storybook-sh.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook-ingress-sh
  annotations:
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: storybook-sh
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storybook-svc-sh
            port:
              name: storybook-sh
