ingress/ingress-storybook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook-ingress
  annotations:
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: storybook
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storybook-svc
            port:
              name: storybook
