ingress/ingress-tax-calculator-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tax-api-ingress
  annotations:
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: tax-api
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tax-api-svc
            port:
              name: tax-api
