ingress/ingress-taxapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taxapp-ingress
  annotations:
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: taxapp
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taxapp-svc
            port:
              name: taxapp
